# harness-rlm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
.harness-rlm/agents/: explorer.toml
adapters/claude_code/: README.md  SKILL.md
adapters/codex/: README.md  install-codex.sh  mcp-config.md
adapters/goose/: README.md  install-goose.sh  mcp-config.md
adapters/opencode/: README.md  install-opencode.sh  mcp-config.md
arc_integration/: __init__.py  aggregate.py  arc3_runner.py  arc3_stub.py  runner.py  score.py
claude_skill/hooks/: budget_guard.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COOKBOOK.md  DECISIONS.md  HARNESS_DESIGN.md  HOW_IT_WORKS.md  MCP_TOOLS.md  PERFORMANCE.md  WHAT_IS_RLM.md
examples/: e2e_claude_p.py  long_context_demo.py  run_tau2.sh  run_tau2_py.py
results/: tau2_airline_3tasks.json  tau2_claude_only_10tasks.json  tau2_claude_only_1task.json
scripts/: deploy_arc_runs_to_ec2.sh
skill/: SKILL.md
tau2_integration/: __init__.py  claude_headless_agent.py  claude_headless_user.py  register.py  rlm_agent.py
tests/: test_agent_loop.py  test_arc_score.py  test_batch.py  test_caching_and_structured.py  test_core.py  test_ensemble.py  test_gepa.py  test_harness_top.py  test_hooks.py  test_long_context_demo.py  test_mcp_server.py  test_mcp_tools.py  test_models.py  test_modules.py  test_orchestrator.py  test_providers.py  test_rlm.py  test_rlm_tree_and_mcp.py  test_signatures.py  test_streaming_and_viz.py  test_subagents.py  test_tools.py  test_trajectory.py
(+47 files in other folders)
