[project]
name = "harness-rlm"
version = "0.3.0"
description = "Use any existing coding-agent harness (Claude Code, Goose, etc.) as a Recursive Language Model substrate."
authors = [{ name = "Rachitt Shah" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "anthropic>=0.40.0",
    "arc-agi>=0.9.8",
    "litellm>=1.85.0",
    "mcp>=1.0.0",
    "openai>=2.37.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# tau2-bench is not on PyPI. To use the tau2 integration, install it manually:
#   uv pip install --editable /path/to/tau2-bench
# The tau2_integration/ module imports tau2 lazily so this package works without it.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[project.scripts]
rlm-mcp-server = "harness_rlm.mcp_server:main"
harness-rlm = "harness_rlm.harness:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_rlm"]
# Include the shared harness-agnostic skill so load_shared_skill() can find it
# in the installed wheel layout, not just the editable/dev layout.
[tool.hatch.build.targets.wheel.force-include]
"skill/SKILL.md" = "harness_rlm/skill/SKILL.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
